Libtool-ize APR.
To simplify the task, I also shifted the Makefiles to include a rules.mk
(based on APRUTIL's with a few tweaks). Still needs some work to remove the
INCLUDES setup in all the Makefiles (these can be shared).

buildconf now does more work (and generates some output)

aclocal.m4 is based on a number of M4 files, rather than standalone

apr/test/ has been updated but is probably broken in a few ways.

objs/ is now gone. we link directly from the .lo files.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61037 13f79535-47bb-0310-9956-ffa450edef68

--- a/.cvsignore
+++ b/.cvsignore
@@ -3,9 +3,8 @@ config.cache
 config.log
 config.status
 configure
+libtool
 APRVARS
-objs
-.deps
 LibD
 LibR
 Debug
@@ -14,3 +13,6 @@ Release
 *.opt
 *.plg
 apr.exports
+aclocal.m4
+.libs
+*.la
