--- a/file_io/unix/Makefile.in
+++ b/file_io/unix/Makefile.in
@@ -1,38 +1,22 @@
-RM=@RM@
-CC=@CC@
-RANLIB=@RANLIB@
-CFLAGS=@CFLAGS@ @OPTIM@
-LIBS=@LIBS@
-LDFLAGS=@LDFLAGS@ $(LIBS)
+
+TARGETS = \
+	dir.lo \
+	fileacc.lo \
+	filedup.lo \
+	filestat.lo \
+	flock.lo \
+	fullrw.lo \
+	open.lo \
+	pipe.lo \
+	readwrite.lo \
+	seek.lo
+
+# bring in rules.mk for standard functionality
+@INCLUDE_RULES@
+
 INCDIR=../../include
 OSDIR=$(INCDIR)/arch/@OSDIR@
 DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
 INCLUDES=-I$(INCDIR) -I$(OSDIR) -I$(DEFOSDIR)
-MKDEP=../../helpers/mkdep.sh
-
-OBJS=dir.o \
-	fileacc.o \
-	filedup.o \
-	filestat.o \
-	flock.o \
-	fullrw.o \
-	open.o \
-	pipe.o \
-	readwrite.o \
-	seek.o
-
-.c.o:
-	$(CC) $(CFLAGS) -c $(INCLUDES) $<
-
-all: $(OBJS)
-
-clean:
-	$(RM) -f *.o *.a *.so
-
-distclean: clean
-	-$(RM) -f Makefile
-
-depend:
-	$(MKDEP) $(INCLUDES) $(CFLAGS) *.c
 
 # DO NOT REMOVE
