--- a/network_io/os2/Makefile.in
+++ b/network_io/os2/Makefile.in
@@ -1,43 +1,20 @@
-CC=@CC@
-RANLIB=@RANLIB@
-CFLAGS=@CFLAGS@ @OPTIM@
-LIBS=@LIBS@
-LDFLAGS=@LDFLAGS@ $(LIBS)
+
+TARGETS = \
+	poll.lo \
+	sendrecv.lo \
+	sockets.lo \
+	sockopt.lo \
+	sockaddr.lo \
+	inet_ntop.lo \
+	inet_pton.lo \
+	os2calls.lo
+
+# bring in rules.mk for standard functionality
+@INCLUDE_RULES@
+
 INCDIR=../../include
 OSDIR=$(INCDIR)/arch/@OSDIR@
 DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
 INCLUDES=-I$(INCDIR) -I$(OSDIR) -I$(DEFOSDIR)
-MKDEP=../../helpers/mkdep.sh
-
-LIB=network.a
-
-OBJS=poll.o \
-	sendrecv.o \
-	sockets.o \
-	sockopt.o \
-	sockaddr.o \
-	inet_ntop.o \
-	inet_pton.o \
-	os2calls.o
-
-.c.o:
-	$(CC) $(CFLAGS) -c $(INCLUDES) $<
-
-all: $(LIB)
-
-clean:
-	$(RM) -f *.o *.a *.so
-
-distclean: clean
-	-$(RM) -f Makefile
-
-
-$(LIB): $(OBJS)
-	$(RM) -f $@
-	$(AR) cr $@ $(OBJS)
-	$(RANLIB) $@
-
-depend:
-	$(MKDEP) $(INCLUDES) $(CFLAGS) *.c
 
 # DO NOT REMOVE
