--- a/threadproc/unix/Makefile.in
+++ b/threadproc/unix/Makefile.in
@@ -1,34 +1,16 @@
-RM=@RM@
-CC=@CC@
-RANLIB=@RANLIB@
-CFLAGS=@CFLAGS@ @OPTIM@
-LIBS=@LIBS@
-LDFLAGS=@LDFLAGS@ $(LIBS)
+
+TARGETS = \
+	proc.lo \
+	procsup.lo \
+	thread.lo \
+	threadpriv.lo \
+	signals.lo
+
+# bring in rules.mk for standard functionality
+@INCLUDE_RULES@
+
 INCDIR=../../include
 DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
 INCLUDES=-I$(INCDIR) -I$(DEFOSDIR)
-MKDEP=../../helpers/mkdep.sh
-
-LIB=libthreadproc.a
-
-OBJS=proc.o \
-	procsup.o \
-	thread.o \
-	threadpriv.o \
-	signals.o
-
-.c.o:
-	$(CC) $(CFLAGS) -c $(INCLUDES) $<
-
-all: $(OBJS)
-
-clean:
-	$(RM) -f *.o *.a *.so
-
-distclean: clean
-	-$(RM) -f Makefile
-
-depend:
-	$(MKDEP) $(INCLUDES) $(CFLAGS) *.c
 
 # DO NOT REMOVE
