--- a/locks/beos/Makefile.in
+++ b/locks/beos/Makefile.in
@@ -1,36 +1,13 @@
-CC=@CC@
-RANLIB=@RANLIB@
-CFLAGS=@CFLAGS@ @OPTIM@
-LIBS=@LIBS@
-LDFLAGS=@LDFLAGS@ $(LIBS)
+
+TARGETS = 
+	locks.lo \
+	crossproc.lo \
+	intraproc.lo \
+
+# bring in rules.mk for standard functionality
+@INCLUDE_RULES@
+
 INCDIR=../../include
 INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
-MKDEP=../../helpers/mkdep.sh
-
-LIB=liblock.a
-
-OBJS=locks.o \
-	crossproc.o \
-	intraproc.o \
-
-.c.o:
-	$(CC) $(CFLAGS) -c $(INCLUDES) $<
-
-all: $(LIB)
-
-clean:
-	$(RM) -f *.o *.a *.so
-
-distclean: clean
-	-$(RM) -f Makefile
-
-
-$(LIB): $(OBJS)
-	$(RM) -f $@
-	$(AR) cr $@ $(OBJS)
-	$(RANLIB) $@
-
-depend:
-	$(MKDEP) $(INCLUDES) $(CFLAGS) *.c
 
 # DO NOT REMOVE
