Fix a compile break with the new APR libtool setup.  Basically, we are using a libtool library from MM, but it isn't getting linked into the Apache executable, so we fail the link stage.  This makes APR publicize the libtool libraries that it uses, so that Apache can link them in.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61038 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -158,6 +158,7 @@ if test "$ac_cv_enable_shmem" = "mm"; then
   sharedmem="1"
   anonymous_shm="1"
   AC_MSG_RESULT(anonymous)
+  LIBTOOL_LIBS="$abs_srcdir/shmem/unix/mm/libmm.la"
 elif test "$ac_cv_enable_shmem" = "file"; then
   sharedmem="1"
   filebased_shm="1"
@@ -865,6 +866,7 @@ AC_SUBST(LIBPREFIX)
 AC_SUBST(EXEEXT)
 AC_SUBST(THREAD_CPPFLAGS)
 AC_SUBST(THREAD_CFLAGS)
+AC_SUBST(LIBTOOL_LIBS)
 
 echo "${nl}Construct Makefiles and header files."
 MAKEFILE1="Makefile lib/Makefile strings/Makefile passwd/Makefile tables/Makefile"
