--- a/APRVARS.in
+++ b/APRVARS.in
@@ -1,3 +1,4 @@
 EXTRA_CPPFLAGS="$EXTRA_CPPFLAGS @THREAD_CPPFLAGS@"
 EXTRA_CFLAGS="$EXTRA_CFLAGS @THREAD_CFLAGS@"
 EXTRA_LIBS="$EXTRA_LIBS @LIBS@"
+LIBTOOL_LIBS="$LIBTOOL_LIBS @LIBTOOL_LIBS@"
