Libtool takes care of the lib prefix so get rid of our own workaround.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61039 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,7 +16,7 @@ MODULES=@MODULES@
 SUBDIRS=@SUBDIRS@
 #shmem/@OSDIR@
 
-LIBAPR = @LIBPREFIX@apr.la
+LIBAPR = libapr.la
 
 TARGET_EXPORTS = apr.exports
 
