--- a/locks/beos/Makefile.in
+++ b/locks/beos/Makefile.in
@@ -1,8 +1,8 @@
 
-TARGETS = 
+TARGETS = \
 	locks.lo \
 	crossproc.lo \
-	intraproc.lo \
+	intraproc.lo
 
 # bring in rules.mk for standard functionality
 @INCLUDE_RULES@
