The big change.  This is part 3 of the apr-util symbols rename, please   see the first commit of srclib/apr-util/include (cvs apr-util/include)   for the quick glance at symbols changed.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61077 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -135,6 +135,8 @@
 
 /* Typedefs that APR needs. */
 
+typedef  unsigned char           apr_byte_t;
+
 typedef  @short_value@           apr_int16_t;
 typedef  unsigned @short_value@  apr_uint16_t;
                                                
