Make testdso compile again.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61094 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -41,7 +41,7 @@ testflock@EXEEXT@: testflock.lo
 
 ### why the export-dynamic?
 testdso@EXEEXT@: testdso.lo
-	$(LINK) --export-dynamic testdso.lo
+	$(LINK) --export-dynamic testdso.lo $(ALL_LIBS)
 
 testoc@EXEEXT@: testoc.lo
 	$(LINK) testoc.lo $(ALL_LIBS)
