occhild is not a shared object, it's an executable, make it look like one.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61095 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -17,7 +17,7 @@ TARGETS = \
 	testdso@EXEEXT@ \
 	testoc@EXEEXT@ \
 	testuuid@EXEEXT@ \
-	occhild.so \
+	occhild@EXEEXT@ \
 	mod_test.so
 
 # bring in rules.mk for standard functionality
@@ -46,7 +46,7 @@ testdso@EXEEXT@: testdso.lo
 testoc@EXEEXT@: testoc.lo
 	$(LINK) testoc.lo $(ALL_LIBS)
 
-occhild.so: occhild.lo
+occhild@EXEEXT@: occhild.lo
 	$(LINK) --module occhild.lo
 
 mod_test.so: mod_test.lo
