occhild is not a module, don't compile it as such.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61096 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -47,7 +47,7 @@ testoc@EXEEXT@: testoc.lo
 	$(LINK) testoc.lo $(ALL_LIBS)
 
 occhild@EXEEXT@: occhild.lo
-	$(LINK) --module occhild.lo
+	$(LINK) occhild.lo $(ALL_LIBS)
 
 mod_test.so: mod_test.lo
 	$(LINK) --module mod_test.lo
